style.css
/* *IDS */
#opening {
    margin-top: 10px;
}

#container1 {
    display: flex;
    margin: auto;
    flex-direction: column;
    align-items: center;
}

#container2 {
    display: none;
}

#container3 {
    display: none;
}

#slider1 {
    align-self: center;
    width: 200px;
}

#slider2 {
    width: 200px;
}

#slider3 {
    width: 200px;
}

#notice1 {
    margin-top: 20px;
    font-size: 14px;
    font-weight: bold;
}

#resize {
    font-size: 5px;
}

#player-username {
    display: none;
    margin-top: auto;
    padding: auto;
    font-size: 14px;
    font-weight: bold;
    text-align: center;
    /* align-items: center; */
}

#usernameInput {
    display: none;
    margin-top: auto;
    padding-left: 65px;
    /* padding-right: */
    /* padding: 5px; */
    font-size: 14px;
    align-self: center;
    width: 50%;
}

#submitUsername {
    display: block;
    margin-top: auto;
    font-size: 14px;
    align-self: center;
    color: black;
}

#next-button {
    display: none;
    margin-top: 20px;
    font-size: 14px;
    font-weight: bold;
    text-align: center;
}

#next {
    margin-top: 10px;
    padding: 5px 10px;
    font-size: 14px;
    align-self: center;
    color: black;
    position: fixed;
    z-index: 9999;
    padding: 10px 20px;
}

#motivational-text {
display: none;
}
#motivational-div {
display: hidden;

}
/* ! classes */

/* ?main container */
.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 10px;
    margin-top: 20px;
    text-align: center;
    width: 70%;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
}

/* ?hidden container */
.hidden {
    display: none;
}


.flex1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 10px;
    padding: 10px;
}

.username {
    display: hidden;
    margin-top: 10px;
    padding: 5px;
    font-size: 14px;
    align-self: center;
}

.username-text {
    display: hidden;
    margin-top: 10px;
    padding: 5px;
    font-size: 18px;

}

